ecmascript/parser/tests/test262-error-references/fail/b25024dbded18139.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/b25024dbded18139.js:1:3
  |
1 | a b;
  |   ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/b25024dbded18139.js:1:1
  |
1 | a b;
  | ^

